2003-10-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-directory.c (nr_type_read_private_list): Test
	for > 1 tokens, fixes potential crash

	* src/libnrtype/nr-type-primitives.c: Make type dict frontend
	to ArikkeiDict

	* src/libarikkei/arikkei-dict.c: Implement

2003-10-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libarikkei/Makefile.am: New stuff from ariariki

	* src/libnrtype/nr-type-xft.c (nr_type_read_xft_list): Moved here

	* src/libnrtype/nr-type-directory.c (nr_type_build): From ariariki
	(nr_type_read_private_list): Use libarikkei tokenizer
	(nr_type_register): Made public

	* src/libnrtype/Makefile.am: Added libarikkei stuff

	* configure.in: Added libarikkei/Makefile

2003-09-18  Mitsuru Oka <oka@mediasite.co.jp>

	* Initial IA-64 Linux support.

	* libnr/nr-object.h defined new type NRType.

	* src/desktop.c ... src/modules/win32.h ... many files:
	modified all of the unsigned int GObject type by GType and
	unsigned int NRObject type by NRType.

2003-08-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_setup): Check whether font
	has assigned code points on BMP private area
	(nr_typeface_ft2_lookup): Map BMP private area directly to glyph index only
	if it is free, use planes F and 10 for direct mapping

2003-08-17  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-07-23  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-07-21  Christian Neumair  <chris@gnome-de.org>

	* src/verbs.c: Fix another typo (preciely->precisely).

2003-07-21  Christian Neumair  <chris@gnome-de.org>

	* src/widgets/paint-selector.c: Fix a typo (colospace->Colorspace).

2003-07-15  Masatake YAMATO  <jet@gyve.org>

	* src/helper/sp-ctrlline.h: Fix a typo(x2->x1).

2003-07-12  Yukihiro Nakai  <ynakai@redhat.com>

	* src/text-context.c (sptc_preedit_changed): New signal handler